--- a/src/main/resources/templates/post/list.html
+++ b/src/main/resources/templates/post/list.html
@@ -1,37 +1,37 @@
 <!DOCTYPE html>
 <html lang="ko" xmlns:th="http://www.thymeleaf.org">
 <head th:replace="fragments/header :: head">
- <style>
-     /* 검색창 */
-     form {
-         margin-bottom: 20px;
-         display: flex;
-         justify-content: center;
-         gap: 10px;
-     }
+    <style>
+        /* 검색창 */
+        form {
+            margin-bottom: 20px;
+            display: flex;
+            justify-content: center;
+            gap: 10px;
+        }
 
-     form input[type="text"] {
-         width: 300px;
-         padding: 10px;
-         border: 1px solid #ccc;
-         border-radius: 5px;
-         font-size: 14px;
-     }
+        form input[type="text"] {
+            width: 300px;
+            padding: 10px;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+            font-size: 14px;
+        }
 
-     form button {
-         padding: 10px 20px;
-         background-color: #007BFF;
-         color: white;
-         border: none;
-         border-radius: 5px;
-         font-size: 14px;
-         cursor: pointer;
-     }
+        form button {
+            padding: 10px 20px;
+            background-color: #007BFF;
+            color: white;
+            border: none;
+            border-radius: 5px;
+            font-size: 14px;
+            cursor: pointer;
+        }
 
-     form button:hover {
-         background-color: #0056b3;
-     }
- </style>
+        form button:hover {
+            background-color: #0056b3;
+        }
+    </style>
 </head>
 <body>
 <div th:replace="fragments/header :: header">
@@ -53,7 +53,10 @@
     </tr>
     </thead>
     <tbody>
-    <tr th:each="post : ${posts}">
+    <tr th:each="post : ${posts}"
+        th:onclick="|location.href='@{/post/detail(id=${post.id})}'|"
+        style="cursor: pointer;"
+    >
         <td th:text="${post.id}"></td>
         <td th:text="${post.title}"></td>
         <td th:text="${post.nickname}"></td>
@@ -71,8 +74,8 @@
 
     <span th:each="i : ${#numbers.sequence(1, totalPages)}">
         <button th:onclick="|location.href='@{/post/list(page=${i}, keyword=${keyword})}'|"
-        th:text="${i}"
-        th:classappend="${i == currentPage} ? 'active' : ''">
+                th:text="${i}"
+                th:classappend="${i == currentPage} ? 'active' : ''">
         </button>
     </span>
 
