--- a/src/main/resources/templates/fragments/nav.html
+++ b/src/main/resources/templates/fragments/nav.html
@@ -8,7 +8,7 @@
 <div th:fragment="nav">
     <nav>
         <a href="/">홈</a>
-        <a href="/post/list">게시글 목록</a>
+        <a href="/post/list">자유게시판</a>
         <!--    <a href="#services">Services</a>-->
         <!--    <a href="#contact">Contact</a>-->
     </nav>
