--- a/src/main/resources/templates/post/list.html
+++ b/src/main/resources/templates/post/list.html
@@ -42,6 +42,9 @@
     <input type="text" th:field="*{keyword}" placeholder="검색할 제목을 입력하세요."/>
     <button type="submit">검색</button>
 </form>
+<div class="write-btn-wrapper">
+    <button class="write-btn" th:onclick="|location.href='@{/post/write}'|">글 쓰기</button>
+</div>
 <table border="1">
     <thead>
     <tr>
