--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -3,7 +3,7 @@
 <head th:fragment="head">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>게시판</title>
+    <title>PostProject</title>
     <link rel="stylesheet" href="/css/custom.css">
     <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
 </head>
@@ -17,12 +17,13 @@
         <div class="header-right">
             <!-- 로그인한 사용자 -->
             <div sec:authorize="isAuthenticated()">
-                <a href="/mypage" class="btn">마이페이지</a>
-                <a href="/logout" class="btn">로그아웃</a>
+                <a href="/member/mypage" class="btn">마이페이지</a>
+                <a href="/member/logout" class="btn">로그아웃</a>
             </div>
             <!-- 로그인하지 않은 사용자 -->
             <div sec:authorize="isAnonymous()">
-                <a href="/login" class="btn">로그인</a>
+                <a href="/member/join" class="btn">회원가입</a>
+                <a href="/member/login" class="btn">로그인</a>
             </div>
         </div>
     </header>
