--- a/src/main/resources/templates/member/join.html
+++ b/src/main/resources/templates/member/join.html
@@ -1,10 +1,39 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+<html lang="ko" xmlns:th="http://www.thymeleaf.org">
+<head th:replace="fragments/header :: head">
 </head>
 <body>
-
+<div th:replace="fragments/header :: header"></div>
+<div th:replace="fragments/nav :: nav"></div>
+<div class="register-container">
+    <h2>회원가입</h2>
+    <form th:action="@{/member/join}" th:object="${memberInsertDto}" th:method="post">
+        <div class="form-group">
+            <label for="loginId">아이디</label>
+            <input type="text" id="loginId" th:field="*{loginId}" placeholder="아이디를 입력하세요.">
+            <p th:if="${#fields.hasErrors('loginId')}" th:errors="*{loginId}" style="color: red;"></p>
+        </div>
+        <div class="form-group">
+            <label for="nickname">닉네임</label>
+            <input type="text" id="nickname" th:field="*{nickname}" placeholder="닉네임을 입력하세요.">
+            <p th:if="${#fields.hasErrors('nickname')}" th:errors="*{nickname}" style="color: red;"></p>
+        </div>
+        <div class="form-group">
+            <label for="password">비밀번호</label>
+            <input type="password" id="password" th:field="*{password}" placeholder="비밀번호를 입력하세요.">
+            <p th:if="${#fields.hasErrors('password')}" th:errors="*{password}" style="color: red;"></p>
+        </div>
+        <div class="form-group">
+            <label for="passwordCheck">비밀번호 확인</label>
+            <input type="password" id="passwordCheck" th:field="*{passwordCheck}" placeholder="비밀번호를 다시 입력하세요.">
+            <p th:if="${#fields.hasErrors('passwordCheck')}" th:errors="*{passwordCheck}" style="color: red;"></p>
+        </div>
+        <div class="form-actions">
+            <button type="submit" class="btn-register">확인</button>
+            <button type="button" th:onclick="|location.href='@{/}'|" class="btn-cancel">취소</button>
+        </div>
+    </form>
+</div>
+<div th:replace="fragments/footer :: footer"></div>
 </body>
 </html>
