--- a/src/main/resources/templates/member/login.html
+++ b/src/main/resources/templates/member/login.html
@@ -1,10 +1,35 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+<html lang="ko" xmlns:th="http://www.thymeleaf.org">
+<head th:replace="fragments/header :: head">
 </head>
 <body>
+<div th:if="${successMessage}">
+    <script>
+        alert([[${successMessage}]]);
+    </script>
+</div>
+<div th:replace="fragments/header :: header"></div>
+<div th:replace="fragments/nav :: nav"></div>
+<div class="login-container">
+    <h2>로그인</h2>
+    <!-- 에러 메시지 -->
+    <div class="error-message" th:if="${param.error}">
+        아이디 또는 비밀번호를 다시 확인해주세요.
+    </div>
 
+    <!-- 로그인 폼 -->
+    <form th:action="@{/member/login}" th:object="${loginDto}" th:method="post">
+        <div class="form-group">
+            <label th:for="*{loginId}">아이디</label>
+            <input type="text" th:field="*{loginId}" name="loginId" placeholder="아이디를 입력하세요">
+        </div>
+        <div class="form-group">
+            <label th:for="*{password}">비밀번호</label>
+            <input type="password" th:field="*{password}" id="password" name="password" placeholder="비밀번호를 입력하세요">
+        </div>
+        <button type="submit" class="login-btn">로그인</button>
+    </form>
+</div>
+<div th:replace="fragments/footer :: footer"></div>
 </body>
 </html>
